2004-06-06 Bogdan Gheorghe
	Fix for Bug 60629 
	* src/org/eclipse/cdt/internal/ui/CPluginImages.java
	* src/org/eclipse/cdt/internal/ui/search/CSearchMessages.properties
	* src/org/eclipse/cdt/internal/ui/search/CSearchResultPage.java
	* src/org/eclipse/cdt/internal/ui/search/LevelTreeContentProvider.java
	* src/org/eclipse/cdt/ui/CSearchResultLabelProvider.java
	
	
	
2004-06-03 Alain Magloire

	Fix for PR 60650
	* src/org/eclipse/cdt/ui/wizards/NewClassWizardPage.java

2004-06-03 Alain Magloire

	Fix for PR 64197 60906

	* src/org/eclipse/cdt/ui/dialogs/BinaryParserBlock.java

2004-06-03 Alain Magloire
	Again the problem:
	Eclipse filename association with editors is done strictly via
	the plugin.xml(and Preference Page).
	The CDT is ship with a sensible default i.e. *.c, *.h, *.cpp etc ..
	We use an hack in EditorUtility.getEditorID(...)
	To change this behaviour for the CView and the 
	COutliner.
	
	Added support for DoubleClick to open a header
	in the outliner.

	Related PRs: 64834, 44363

2004-06-03 Alain Magloire

	Patch from Sam Rob, fix for 64783
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPropertyPage.java

2004-06-02 Bogdan Gheorghe
	
	Fix for Bug 61241 - [Search] Closing the Search view mid search causes an error
	* src/org/eclipse/cdt/internal/ui/search/CSearchTableContentProvider.java
	
2004-06-01 Alain Magloire

	Format the source Hovering better.
	* src/org/eclipse/cdt/internal/ui/text/c/hover/CSourceHover.java
	* src/org/eclipse/cdt/internal/ui/text/c/hover/SourceViewerInformationControl.java

2004-06-01 Alain Magloire

	A release of the CDT was distributed with
	a typ "ELF" instead of "Elf" we provide
	and extension point pointing back to "ELF"
	parser for backward comp.  But ignoring
	it in the UI.

	* src/org/eclipse/cdt/ui/dialogs/BinaryParserBlock.java

2004-06-01 Alain Magloire

	Fall back on the Nature of the project